# HearPaulJennings

./: .gitignore  DEPLOY.md  DEPLOY_WINDOWS.md  LICENSE  README.md  SETUP_VAST.md  main.py  pyproject.toml
app/: classifier.py  config.py  main.py  profanity.py  questions.py  transcriber.py
data/: questions.json
frontend/: app.js  index.html  style.css
scripts/: extract_questions.py
